--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Personal Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-3W0tnxTlTmT0r/Op8rIJW+L+k/ytqxzTZyQ0E8XN/7OMtKYfKcwhG2U5SdU5BzU39l6f5V7oI4c4u1zgprnn6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-3W0tnxTlTmT0r/Op8rIJW+L+k/ytqxzTZyQ0E8XN/7OMtKYfKcwhG2U5SdU5BzU39l6f5V7oI4c4u1zgprnn6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
   </head>
   <body>
     <header>
@@ -37,7 +37,12 @@
       </section>
       <section id="contact">
         <h2>Contact Me</h2>
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+          </div>          
         <form>
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
