--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </header>
     <main>
       <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, my name is John Doe and I'm a web developer.</p>
+        <h2>Thông tin</h2>
+        <p>Hi, Tôi tên là Chí</p>
       </section>
       <section id="work">
         <h2>My Work</h2>
@@ -36,7 +36,7 @@
         </ul>
       </section>
       <section id="contact">
-        <h2>Contact Me</h2>
+        <h2>Liên hệ tôi</h2>
         <div class="social-icons">
             <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
