--- a/index.html
+++ b/index.html
@@ -1,58 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Trái tim nâng cao</title>
+	<title>Heart</title>
 	<style>
 		.heart {
+			width: 100px;
+			height: 90px;
 			position: relative;
-			width: 200px;
-			height: 180px;
-			margin: 50px auto;
-			background-color: #ff6b6b;
-			transform: rotate(-45deg);
-			box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-			transition: transform 0.2s ease-in-out;
-			cursor: pointer;
-		}
-		.heart:hover {
-			transform: rotate(-50deg);
-			box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 		}
 		.heart:before,
 		.heart:after {
 			content: "";
 			position: absolute;
-			top: 0;
 			left: 50px;
+			top: 0;
 			width: 50px;
 			height: 80px;
-			background-color: #ff6b6b;
+			background-color: red;
 			border-radius: 50px 50px 0 0;
 			transform: rotate(-45deg);
+			transform-origin: 0 100%;
 		}
 		.heart:after {
 			left: 0;
 			transform: rotate(45deg);
-		}
-		.heart .text {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			font-size: 2em;
-			color: #fff;
-			text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-			transition: opacity 0.2s ease-in-out;
-			opacity: 0;
-		}
-		.heart:hover .text {
-			opacity: 1;
+			transform-origin: 100% 100%;
 		}
 	</style>
 </head>
 <body>
-	<div class="heart">
-		<div class="text">Yêu</div>
-	</div>
+	<div class="heart"></div>
 </body>
 </html>
