--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <!-- </div> -->
     <div class="title">
       <!-- EDIT HERE -->
-      <h3 class="STARDUST1">2023</h3>
+      <!-- <h3 class="STARDUST1">2023</h3>
       <h1 class="STARDUST2">MTC &amp; MTC</h1>
-      <h3 class="STARDUST3">L O V E <strong>❤</strong> Y O U</h3>
+      <h3 class="STARDUST3">L O V E <strong>❤</strong> Y O U</h3> -->
       <img class="img" src="EDIT_ME.png" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
     </div>
