Update links and button text in index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ IPA Library & Jailbreak</h5>
 
 <div class="block" style="margin-left:30px;">
 <p class="row"><span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://www.facebook.com/mthchi/" class="button button-fill button-big color-gray external">FACEBOOK</a></span> <span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://repo.mtchi.net/" class="button button-fill button-big color-gray external">SOURCE</a></span></p>
-<p class="row"><span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://mtchi.net" class="button button-fill button-big color-gray external">TRANG CHỦ</a></span> <span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://raw.githubusercontent.com/mtchis/mtchis.github.io/refs/heads/main/images/Donate.jpg" class="button button-fill button-big color-gray external">DONATE</a></span></p>
+<p class="row"><span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://www.facebook.com/mthchi/" class="button button-fill button-big color-gray external">TRANG CHỦ</a></span> <span style="width: calc((100% - 15px*1) / 2);"><a target="_blank" href="https://raw.githubusercontent.com/mtchis/mtchis.github.io/refs/heads/main/images/Donate.jpg" class="button button-fill button-big color-gray external">DONATE</a></span></p>
 </div>
 
 
